# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscript-ltk"
version = "0.1.41"
description = "A little toolkit for writing UIs in PyScript"
readme = "README.md"
authors = [{ name = "Chris Laffra", email = "chris@chrislaffra.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jquery", "pyscript", "ui", "widgets", "css"]
dependencies = [ ]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["ltk"]

[project.optional-dependencies]
dev = ["mock", "pytest"]

[tool.setuptools.package-data]
mypkg = ["*.png", "*.html"]

[project.urls]
Homepage = "https://github.com/laffra/ltk"
